// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all 1`] = `
"
// file: examples/01-introduction/01-basics/App.html
------------------------------
js   = 
------------------------------
css  = 
------------------------------
html = <h1 class=’3adzgapv9bc’>Hello World!</h1>

"
`;

exports[`test all 2`] = `
"
// file: examples/01-introduction/02-adding-data/App.html
------------------------------
js   = 
	let name = 'world';


------------------------------
css  = 
------------------------------
html = 

<h1 class=’jss62dx38da’>Hello \${name.toUpperCase()}!</h1>

"
`;

exports[`test all 3`] = `
"
// file: examples/01-introduction/03-dynamic-attributes/App.html
------------------------------
js   = 
	let src = '/tutorial/image.gif';
	let name = 'Rick Astley';


------------------------------
css  = 
------------------------------
html = 

<img class=’hboe0t8rpo’ \${{src}} alt=’\${name} dances.’>

"
`;

exports[`test all 4`] = `
"
// file: examples/01-introduction/04-styling/App.html
------------------------------
js   = 
------------------------------
css  = 
	p.9pambbawi45 }
		color: purple;
		font-family: 'Comic Sans MS', cursive;
		font-size: 2em;
	}

------------------------------
html = <p class=’9pambbawi45’>This is a paragraph.</p>



"
`;
